# connect4-rust

./: Cargo.toml  README.md
src/: board.rs  draw.rs  input.rs  main.rs  raw_mode.rs  test.rs  util.rs
src/board/: board_slot.rs  line_iter.rs  mod.rs
src/game/: check_winner.rs  mod.rs
