[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
env_logger = "0.9.1"
log = "0.4.17"
strum = "0.24"
strum_macros = "0.24"
indoc = "1.0"
crossterm = "0.25.0"
termsize = "0.1"

[dev-dependencies]
rstest = "0.15.0"